# sge-multi-tenancy

./: .dockerignore  .env.evolution  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.alpine  README.md  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose-evolution.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  uwsgi.ini
.github/workflows/: deploy.yml
ai/: models.py  prompts.py
ai/migrations/: 0001_initial.py
app/: celery.py  settings.py  urls.py
app/templates/: base.html
authentication/: forms.py  urls.py  views.py
brands/: admin.py  models.py  urls.py  views.py
brands/migrations/: 0001_initial.py  0002_alter_brand_options.py
categories/: admin.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
dashboard/: tasks.py  views.py
inflows/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
middlewares/: rate_limiting_middleware.py  request_log_middleware.py  thread_local_middleware.py
nginx/: Dockerfile  default.conf
outflows/: forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
products/: admin.py  forms.py  models.py  urls.py  views.py
scripts/: data.py  entrypoint.sh  populate_brands.py  populate_categories.py  populate_db.py  populate_suppliers.py  teste.py
services/: agent.py  evolution.py  notify.py
suppliers/: admin.py  models.py  urls.py  views.py
utils/: messages.py  metrics.py  validators.py
webhooks/: admin.py  forms.py  models.py  urls.py  views.py
(+53 files in other folders)
